--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# Compiled python modules.
+.python-version
 *.pyc
-
-# Setuptools distribution folder.
-/dist/
-
-# Python egg metadata, regenerated from source files by setuptools.
-/*.egg-info
+build/
+dist/
+*.egg-info
